; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_vm_sparc.c_compile_function.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_vm_sparc.c_compile_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.func_info = type { %struct.src_insn*, i32*, i32, i64, i32, i32 }
%struct.src_insn = type { %struct.src_insn* }

@L0 = common dso_local global i32 0, align 4
@F0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.func_info*)* @compile_function to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @compile_function(i32* %0, %struct.func_info* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.func_info*, align 8
  %5 = alloca %struct.src_insn*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.func_info* %1, %struct.func_info** %4, align 8
  %6 = load %struct.func_info*, %struct.func_info** %4, align 8
  %7 = call i32 @analyze_function(%struct.func_info* %6)
  %8 = load i32, i32* @L0, align 4
  %9 = load %struct.func_info*, %struct.func_info** %4, align 8
  %10 = getelementptr inbounds %struct.func_info, %struct.func_info* %9, i32 0, i32 5
  store i32 %8, i32* %10, align 4
  %11 = load i32, i32* @F0, align 4
  %12 = load %struct.func_info*, %struct.func_info** %4, align 8
  %13 = getelementptr inbounds %struct.func_info, %struct.func_info* %12, i32 0, i32 4
  store i32 %11, i32* %13, align 8
  %14 = load %struct.func_info*, %struct.func_info** %4, align 8
  %15 = getelementptr inbounds %struct.func_info, %struct.func_info* %14, i32 0, i32 3
  store i64 0, i64* %15, align 8
  %16 = call i32 @SL(i32 64, i32 128)
  %17 = load %struct.func_info*, %struct.func_info** %4, align 8
  %18 = getelementptr inbounds %struct.func_info, %struct.func_info* %17, i32 0, i32 2
  store i32 %16, i32* %18, align 8
  %19 = load %struct.func_info*, %struct.func_info** %4, align 8
  %20 = getelementptr inbounds %struct.func_info, %struct.func_info* %19, i32 0, i32 1
  store i32* null, i32** %20, align 8
  %21 = load %struct.func_info*, %struct.func_info** %4, align 8
  %22 = getelementptr inbounds %struct.func_info, %struct.func_info* %21, i32 0, i32 0
  %23 = load %struct.src_insn*, %struct.src_insn** %22, align 8
  store %struct.src_insn* %23, %struct.src_insn** %5, align 8
  br label %24

24:                                               ; preds = %29, %2
  %25 = load %struct.src_insn*, %struct.src_insn** %5, align 8
  %26 = getelementptr inbounds %struct.src_insn, %struct.src_insn* %25, i32 0, i32 0
  %27 = load %struct.src_insn*, %struct.src_insn** %26, align 8
  store %struct.src_insn* %27, %struct.src_insn** %5, align 8
  %28 = icmp ne %struct.src_insn* %27, null
  br i1 %28, label %29, label %34

29:                                               ; preds = %24
  %30 = load i32*, i32** %3, align 8
  %31 = load %struct.func_info*, %struct.func_info** %4, align 8
  %32 = load %struct.src_insn*, %struct.src_insn** %5, align 8
  %33 = call i32 @compile_one_insn(i32* %30, %struct.func_info* %31, %struct.src_insn* %32)
  br label %24

34:                                               ; preds = %24
  %35 = load %struct.func_info*, %struct.func_info** %4, align 8
  %36 = call i32 @free_source_insns(%struct.func_info* %35)
  ret void
}

declare dso_local i32 @analyze_function(%struct.func_info*) #1

declare dso_local i32 @SL(i32, i32) #1

declare dso_local i32 @compile_one_insn(i32*, %struct.func_info*, %struct.src_insn*) #1

declare dso_local i32 @free_source_insns(%struct.func_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
